--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -91,6 +91,7 @@
     justify-content: space-evenly;
     align-items: center;
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    height: 100%;
 }
 
 input{
